@@ -121,7 +121,7 @@ define,	   0x649EBE,	0x668816,	0x649E02,	"civ_prog_free",				"void (__cdecl *) (
 inlead,	   0x61A480,	0x63B9F0,	0x61A3B0,	"Context_Menu_open",				"int (__fastcall *) (Context_Menu * this, int edx, int x, int y, int param_3)"
 define,	   0x4E993C,	0x4F273A,	0x4E99FC,	"ADDR_OPEN_UNIT_MENU_RETURN",			"int"
 define,	   0x61B0C0,	0x63C940,	0x61AFF0,	"Context_Menu_widen_for_text",			"void (__fastcall *) (Context_Menu * this, int edx, char * text)"
-inlead,	   0x61A110,	0x63B420,	0x61A040,	"Context_Menu_add_item_and_set_field_18",	"int (__fastcall *)  (Context_Menu * this, int edx, int item_id, char * text, int field_18)"
+inlead,	   0x61A110,	0x63B420,	0x61A040,	"Context_Menu_add_item_and_set_color",		"int (__fastcall *)  (Context_Menu * this, int edx, int item_id, char * text, int red)"
 inlead,	   0x45C750,	0x45EA70,	0x45C7D0,	"Unit_ai_move_terraformer",			"void (__fastcall *) (Unit * this)"
 define,	   0x4B1DC0,	0x4B8D50,	0x4B1E50,	"City_requires_improvement_to_grow",		"int (__fastcall *) (City * this)"
 inlead,	   0x5C1AD0,	0x5D0670,	0x5C17E0,	"Unit_can_perform_command",			"bool (__fastcall *) (Unit * this, int edx, int unit_command_value)"
@@ -238,7 +238,7 @@ define,	   0x64C91E,	0x66AFD7,	0x64C85E,	"print_int",					"char * (__cdecl *) (i
 repl call, 0x5D759A,	0x5E69D2,	0x5D74CA,	"Tile_has_city_for_agri_penalty_exception",	""
 repl call, 0x564528,	0x570873,	0x5644D8,	"show_popup_option_1_razes",			""
 repl call, 0x4DA1E6,	0x4E2B96,	0x4DA2A6,	"show_popup_option_2_razes",			""
-define,	   0x619E70,	0x63B090,	0x619DA0,	"Context_Menu_add_item",			"int (__fastcall *) (Context_Menu * this, int edx, int item_id, char * text, bool param_3, int param_4)"
+define,	   0x619E70,	0x63B090,	0x619DA0,	"Context_Menu_add_item",			"int (__fastcall *) (Context_Menu * this, int edx, int item_id, char * text, bool checkbox, Tile_Image_Info * image)"
 repl call, 0x4E9808,	0x4F25EF,	0x4E98C8,	"Context_Menu_add_abandon_city",		""
 define,	   0x60F6A0,	0x62B460,	0x60F5D0,	"TextBuffer_check_ptr",				"char * (__fastcall *) (TextBuffer * this, int edx, char * str)"
 repl call, 0x4D5525,	0x4DDCF6,	0x4D55E5,	"TextBuffer_check_pedia_upgrades_to_ptr_1",	""
@@ -491,13 +491,13 @@ define,	   0x55A240,	0x566150,	0x55A1F0,	"Leader_get_civ_noun",				"char * (__fa
 define,	   0x55A340,	0x566250,	0x55A2F0,	"Leader_get_civ_formal_name",			"char * (__fastcall *) (Leader * this)"
 define,	   0x55A2C0,	0x5661D0,	0x55A270,	"Leader_get_title",				"char * (__fastcall *) (Leader * this)"
 repl call, 0x593614,	0x5A0DAE,	0x593334,	"Leader_get_player_title_for_intro_popup",	""
+define,	   0x61A2E0,	0x63B710,	0x61A210,	"Context_Menu_disable_item",			"int (__fastcall *) (Context_Menu * this, int edx, int item_id)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
 ignore,    0x558F70,	0x0,		0x0,		"Leader_is_enemy_unit",				"char (__fastcall *) (Leader * this, int edx, Unit * unit)"
 ignore,	   0x4BFD40,	0x0,		0x0,		"City_get_turns_to_build",			"int (__fastcall *) (City * this, int edx, int order_type, int order_id, char param_3)"
 ignore,    0x4BFF80,	0x0,		0x0,		"City_can_build_improvement",			"char (__fastcall *) (City * this, int edx, 0x0,   int i_improv, char param_2)"
-ignore,	   0x619E70,	0x63B090,	0x619DA0,	"Context_Menu_add_item",			"int (__fastcall *) (Context_Menu * this, int edx, int item_id, char * text, bool param_3, int param_4)"
 ignore,	   0x4E3D90,	0x0,		0x0,		"Main_Screen_Form_is_unit_hidden_from_player",	"bool (__fastcall *) (Main_Screen_Form * this, int edx, Unit * unit)"
 ignore,	   0x4E8850,	0x4F14E0,	0x4E8910,	"Main_Screen_Form_open_right_click_unit_menu",	"void (__fastcall *) (Main_Screen_Form * this, int edx, int tile_x, int tile_y, int mouse_x, int mouse_y)"
 ignore,	   0x4DBA70,	0x0,		0x0,		"Main_Screen_Form_set_selected_unit",		"void (__fastcall *) (Main_Screen_Form * this, int edx, Unit * unit, bool param_2)"
