@@ -10,6 +10,10 @@ enable_trade_screen_scroll = true
 autofill_best_gold_amount_when_trading = true
 skip_repeated_tile_improv_replacement_asks = true
 group_units_on_right_click_menu = true
+
+; On the right click menu, units with no remaining moves will appear in gray text
+gray_out_units_on_menu_with_no_remaining_moves = true
+
 show_detailed_tile_info = true
 show_golden_age_turns_remaining = true
 
